--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -13,6 +13,7 @@
         <br>tenpo kama la mi o pali e nimi mute sin a.
         <br>toki mi li pakala la o toki e ni tawa mi.</p>
         <ul>
+            <li><a href="/mute-ante/nimi-mute/ona">ona (nimi 41)</a></li>
             <li><a href="/mute-ante/nimi-mute/tomo-ni">tomo ni (nimi 115)</a></li>
             <li><a href="/mute-ante/nimi-mute/suno">suno (nimi 218)</a></li>
             <li><a href="/mute-ante/nimi-mute/len-pi-laso-telo">len pi laso telo (nimi 647)</a></li>
