--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -20,5 +20,5 @@
             <li><a href="/mute-ante/nimi-mute/jan">jan (nimi 332)</a></li>
             <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu">tomo pi esun lipu (nimi 860)</a></li>
             </ul>
-        <p> ⇤ <a href="/mute-ante">o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante">lipu pini</a></p>
     </div></body>
