--- a/nimi-mute/jan.html
+++ b/nimi-mute/jan.html
@@ -69,6 +69,6 @@
         <br>toki la o pona.
         <br>o jan pona.
         </p>
-        <p> ⇤ <a href="/mute-ante/nimi-mute">o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">lipu pini</a></p>
     </div>
     </body>
