--- a/nimi-mute/ona.html
+++ b/nimi-mute/ona.html
@@ -23,6 +23,6 @@
         <br>pilin la mi majuna.
         <br>mi pakala.
         </p>
-        <p> ⇤ <a href="/mute-ante/nimi-mute">o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">lipu pini</a></p>
     </div>
     </body>
