--- a/nimi-mute/tomo-pi-esun-lipu.html
+++ b/nimi-mute/tomo-pi-esun-lipu.html
@@ -89,6 +89,6 @@
         <br>tenpo ni la mi lon tomo mi la, toki mi li pini.
         <br>mi wile e ni: lipu ni li pona tawa sina li musi tawa sina.
         <br>mi tawa a!</p>
-        <p> ⇤ <a href="/mute-ante/nimi-mute">o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">lipu pini</a></p>
     </div>
     </body>
