--- a/nimi-mute/suno.html
+++ b/nimi-mute/suno.html
@@ -75,6 +75,6 @@
         <br>kalama musi pi weka sona.
         <br>tawa ni: tawa pona.
         </p>
-        <p> ⇤ <a href="/mute-ante/nimi-mute">o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">lipu pini</a></p>
     </div>
     </body>
