--- a/nimi-mute/tomo-ni.html
+++ b/nimi-mute/tomo-ni.html
@@ -27,6 +27,6 @@
         <br>mi ken lukin e telo suli kin
         <br>tomo ni li pona mute tawa mi a
         </p>
-        <p> ⇤ <a href="/mute-ante/nimi-mute">o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">lipu pini</a></p>
     </div>
     </body>
