--- a/blender.html
+++ b/blender.html
@@ -33,7 +33,7 @@
         <img src="/mute-ante/blenders/cuberootof2.png" alt="cuberootof2" width="100%">
         <img src="/mute-ante/blenders/idk2.png" alt="idk2" width="100%">
         <img src="/mute-ante/blenders/lines.png" alt="lines" width="100%">
-        <img src="/mute-ante/blenders/monsuta.png" alt="monsuta" width="100%">
+        <img src="/mute-ante/blenders/square.png" alt="square" width="100%">
 
         <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div></body>
