added a new text and changed header formatting

--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>≠</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,300;1,300;1,800&display=swap');</style> 
+        <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@0,300;1,300;1,800&display=swap');</style> 
     </head>
 
     <body><div class="centered-container">
@@ -13,6 +13,7 @@
         <br>tenpo kama la mi o pali e nimi mute sin a.
         <br>toki mi li pakala la o toki e ni tawa mi.</p>
         <ul>
+            <li><a href="/mute-ante/nimi-mute/sona-pini">sona pini (nimi 122)</a></li>
             <li><a href="/mute-ante/nimi-mute/ona">ona (nimi 41)</a></li>
             <li><a href="/mute-ante/nimi-mute/tomo-ni">tomo ni (nimi 115)</a></li>
             <li><a href="/mute-ante/nimi-mute/suno">suno (nimi 218)</a></li>
