--- a/sitelog.html
+++ b/sitelog.html
@@ -17,8 +17,10 @@
 
     <body><div class="container">
         <h1>→ sitelog</h1><br>
+        <h2>→ 31/8/2022 20:26</h2>
+        <p>It's been a while since i've reinstalled Ubuntu, but i'm back and made another <a href="/mute-ante/nimi-mute/sona-pini">little poem</a>!</p>
         <h2>→ 18/8/2022 06:29</h2>
-        <p>I added a <a href="/mute-ante/nimi-mute/ona">new toki pona poem thing.</a></p>
+        <p>I added a <a href="/mute-ante/nimi-mute/ona">new toki pona poem thing</a>.</p>
         <h2>→ 14/8/2022 13:59</h2>
         <p>Ok so, i made all links bold from the css files, but that meant having to remove almost ALL the bold tags from all the pages... That took 50 minutes?? jeez...</p>
         <h2>→ 14/8/2022 13:09</h2>
