i messed up the font oops

--- a/nimi-mute/tomo-ni.html
+++ b/nimi-mute/tomo-ni.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <title>≠</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@0,300;1,300;1,800&display=swap');</style></head>
-
+        <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
     <body><div class="centered-container">
 
         <h1>tomo ni</h1>
