--- a/musicians.html
+++ b/musicians.html
@@ -11,6 +11,8 @@
 
         <h1>→ favorite musicians</h1>
         <ul>
+            <li><a href="https://radiohead.bandcamp.com/" class="bandcamp">
+                Radiohead</a>: an experimental rock band making awesome songs since the 90s.<br></li>
             <li><a href="https://gingerroot.bandcamp.com/" class="bandcamp">
                 Ginger Root/Cameron Lew</a>: agressive elevator soul and city pop bops<br></li>
             <li><a href="https://open.spotify.com/artist/5INjqkS1o8h1imAzPqGZBb" class="spotify">
