--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             transform: translate(-50%, 50%);
             width: 600px;
             padding: 20px;
-            padding-top: 30px; padding-bottom: 30px;
+            margin: 20px;
             border: solid #F0F0F0 2px;
             border-radius: 30px;
             line-height: 1.5;
@@ -26,14 +26,14 @@
 
     <body><div class="this-container">
         <h1>cvni81 / mute ante</h1>
-        <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p>
+        <p>seize the day · pt-br, en, tok · <18yo, they/them</p>
         <a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a> · 
         <a href="mailto:cvni1981@gmail.com">email</a> · 
         <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify">spotify</a> · 
         <a href="https://bandcamp.com/cvni1981" class="bandcamp">bandcamp (fan)</a> · 
         <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube">youtube</a><br>
-        <p>Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself. Also, this site is under some reconstruction!</p></div>
-        <div style="text-align: left; display: flex; align-items: center;">
+        <p style="margin-bottom: 8px;">Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself. Also, this site is under some reconstruction!</p></div>
+    <div class="this-container" style="text-align: left;">
         <ul style="font-size: larger; padding-left: 20px">
             <li><a href="/mute-ante/interests">interests</a> things i'm interested in<br></li>
             <li><a href="/mute-ante/musicians">musicians</a> good music people<br></li>
