--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <style>
 
         .this-container{
-            position: absolute;
-            left: 50%;
-            bottom: 50%;
-            transform: translate(-50%, 50%);
             width: 600px;
             padding: 20px;
             margin: 20px;
@@ -24,7 +20,9 @@
 
     </style></head>
 
-    <body><div class="this-container">
+    <body>
+    <div style="position: absolute; left: 50%; bottom: 50%; transform: translate(-50%, 50%);">
+    <div class="this-container">
         <h1>cvni81 / mute ante</h1>
         <p>seize the day · pt-br, en, tok · <18yo, they/them</p>
         <a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a> · 
@@ -41,5 +39,5 @@
             <li><a href="/mute-ante/blender">blender</a> things i've made in blender<br></li>
             <li><a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br></li>
             <li><a href="/mute-ante/difference">difference</a> why it matters<br></li>
-            <li><a href="/mute-ante/sitelog">sitelog</a><br></li></ul></div>
+            <li><a href="/mute-ante/sitelog">sitelog</a><br></li></ul></div></div>
     </div></body>
