--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube">youtube</a><br>
         <p style="margin-bottom: 8px;">Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself. Also, this site is under some reconstruction!</p></div>
     <div class="this-container" style="text-align: left;">
-        <ul style="font-size: larger; padding-left: 20px">
+        <ul style="font-size: larger; padding-left: 20px;margin-top: 0px;margin-bottom: 0px;">
             <li><a href="/mute-ante/interests">interests</a> things i'm interested in<br></li>
             <li><a href="/mute-ante/musicians">musicians</a> good music people<br></li>
             <li><a href="/mute-ante/websites">websites</a> cool websites i've collected<br></li>
