--- a/blenders/pyramids.html
+++ b/blenders/pyramids.html
@@ -17,8 +17,8 @@
     </style></head>
 
     <body><div class="container">
-        <h1>→ pyramids</h1><br>
-
+        <h1>→ pyramids</h1>
+        <hr style="color:#ddba39">
         <img src="/mute-ante/blenders/pyramids/pyramids.png" alt="pyramids" width="100%">
         <img src="/mute-ante/blenders/pyramids/pyramids2.png" alt="pyramids2" width="100%">
         <img src="/mute-ante/blenders/pyramids/pyramids3.png" alt="pyramids3" width="100%">
