--- a/websites/geo.html
+++ b/websites/geo.html
@@ -8,8 +8,8 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="centered-container">
-        <h1>→ geography and flags</h1><br>
-
+        <h1>→ geography and flags</h1>
+        <hr>
         <h2>→ <a href="https://www.jasondavies.com/maps/transition/">Map Projection Transitions</a></h2>
         <p>An awesome visualization by Jason Davies of many map projections. <a href="https://www.jasondavies.com/maps/">Their website</a> also has many other cool map stuffs.</p>
 
