--- a/websites/misc.html
+++ b/websites/misc.html
@@ -8,8 +8,8 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="container">
-        <h1>→ miscellaneously interesting</h1><br>
-
+        <h1>→ miscellaneously interesting</h1>
+        <hr>
         <h2>→ <a href="https://www.montereybayaquarium.org/animals/live-cams/sea-otter-cam">Sea Otter Live Cam</a></h2>
         <p>A live feed of the lovely sea otters at Monterey Bay Aquarium.</p>
 
