--- a/sitelog.html
+++ b/sitelog.html
@@ -16,7 +16,8 @@
         </style></head>
 
     <body><div class="container">
-        <h1>→ sitelog</h1><br>
+        <h1>→ sitelog</h1>
+        <hr>
         <h2>→ 31/8/2022 20:26</h2>
         <p>It's been a while since i've reinstalled Ubuntu, but i'm back and made another <a href="/mute-ante/nimi-mute/sona-pini">little poem</a>! Also i feel like changing the layout again...</p>
         <h2>→ 18/8/2022 06:29</h2>
