--- a/websites/math.html
+++ b/websites/math.html
@@ -8,8 +8,8 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="container">
-        <h1>→ math and physics</h1><br>
-
+        <h1>→ math and physics</h1>
+        <hr>
         <h2>→ <a href="https://codepen.io/akm2/full/rHIsa">Gravity Points</a></h2>
         <p>A cool interactive simulation of orbiting points by Akimitsu Hamamuro.</p>
 
