--- a/blenders/pyramids.html
+++ b/blenders/pyramids.html
@@ -18,7 +18,7 @@
 
     <body><div class="container">
         <h1>→ pyramids</h1>
-        <hr style="color:#ddba39">
+        <hr style="border-color:#ddba39">
         <img src="/mute-ante/blenders/pyramids/pyramids.png" alt="pyramids" width="100%">
         <img src="/mute-ante/blenders/pyramids/pyramids2.png" alt="pyramids2" width="100%">
         <img src="/mute-ante/blenders/pyramids/pyramids3.png" alt="pyramids3" width="100%">
