--- a/difference.html
+++ b/difference.html
@@ -10,7 +10,7 @@
     <style>
         .this-container{
             background-color: #080808;
-            width: 80%;
+            width: 700px;
             margin: 10px auto;
             padding: 20px;
             border: solid #F0F0F0 2px;
@@ -36,7 +36,7 @@
             <br><b><i>→ Everyone is equal and different, but not more or less than anyone else.</i></b>
             <br>
             <br>A bit confusing, but i hope you get it.
-            </blockquote></figure><br>
+            </blockquote></figure>
         <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div>
     </body>
