changed a bunch of stuff

--- a/difference.html
+++ b/difference.html
@@ -21,7 +21,7 @@
 
     <body><div class="this-container">
 
-        <h1>→ about difference in general</h1>
+        <h1>about difference in general</h1>
         <hr>
         <figure><blockquote>
             Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
