--- a/interests.html
+++ b/interests.html
@@ -10,7 +10,7 @@
 
     <body><div class="centered-container">
 
-        <h1>→ stuff I find interesting</h1>
+        <h1>stuff I find interesting</h1>
         <hr>
         <ul>
             <li><b>Language learning</b>: finding new ways to communicate things to others is always fun. I'm proficient in <a href="https://en.wikipedia.org/wiki/Toki_Pona">toki pona</a>, a constructed language with 137 words. o kama sona e toki ni a!<br></li>
