--- a/musicians.html
+++ b/musicians.html
@@ -9,7 +9,7 @@
 
     <body><div class="centered-container">
 
-        <h1>→ favorite musicians</h1>
+        <h1>favorite musicians</h1>
         <hr>
         <ul>
             <li><a href="https://radiohead.bandcamp.com/" class="bandcamp">
