--- a/websites.html
+++ b/websites.html
@@ -8,7 +8,7 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="centered-container">
-        <h1>→ cool websites</h1>
+        <h1>cool websites</h1>
         <hr>
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
         <h2>→ <a href="/mute-ante/websites/math">math and physics (15)</a></h2>
