--- a/websites/lang.html
+++ b/websites/lang.html
@@ -8,7 +8,7 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="container">
-        <h1>→ language</h1>
+        <h1>language</h1>
         <hr>
         <h2>→ <a href="https://decodeunicode.org/">decodeunicode</a></h2>
         <p>A site with characters from a TON of languages from all around the world, as encoded by Unicode 11.0 (kinda out of date but still awesome). By Johhannes Bergerhausen and Siri Poarangan.</p>
