--- a/blender.html
+++ b/blender.html
@@ -19,7 +19,7 @@
     </style></head>
 
     <body><div class="container">
-        <h1>→ some things made in blender</h1>
+        <h1>some things made in blender</h1>
         <hr>
         <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color (i should make colorful things more often...). These are a bunch of them.
             <br>btw, all the images (just like all of the site) are licensed under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
