--- a/blenders/pyramids.html
+++ b/blenders/pyramids.html
@@ -17,7 +17,7 @@
     </style></head>
 
     <body><div class="container">
-        <h1>→ pyramids</h1>
+        <h1>pyramids</h1>
         <hr style="border-color:#ddba39">
         <img src="/mute-ante/blenders/pyramids/pyramids.png" alt="pyramids" width="100%">
         <img src="/mute-ante/blenders/pyramids/pyramids2.png" alt="pyramids2" width="100%">
