--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
         <a href="https://bandcamp.com/cvni1981" class="bandcamp">bandcamp (fan)</a> · 
         <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube">youtube</a><br>
         <p style="margin-bottom: 8px;">Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself. Also, this site is under some reconstruction!</p></div>
-    <div class="this-container" style="text-align: left;">
-        <ul style="font-size: larger; padding-left: 20px;margin-top: 0px;margin-bottom: 0px;">
-            <li><a href="/mute-ante/interests">interests</a> things i'm interested in<br></li>
-            <li><a href="/mute-ante/musicians">musicians</a> good music people<br></li>
-            <li><a href="/mute-ante/websites">websites</a> cool websites i've collected<br></li>
-            <li><a href="/mute-ante/blender">blender</a> things i've made in blender<br></li>
-            <li><a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br></li>
-            <li><a href="/mute-ante/difference">difference</a> why it matters<br></li>
-            <li><a href="/mute-ante/sitelog">sitelog</a><br></li></ul></div></div>
+    <div class="this-container" style="font-size:larger">
+            <a href="/mute-ante/interests">interests</a> things i'm interested in<br>
+            <a href="/mute-ante/musicians">musicians</a> good music people<br>
+            <a href="/mute-ante/websites">websites</a> cool websites i've collected<br>
+            <a href="/mute-ante/blender">blender</a> things i've made in blender<br>
+            <a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br>
+            <a href="/mute-ante/difference">difference</a> why it matters<br>
+            <a href="/mute-ante/sitelog">sitelog</a></ul></div></div>
     </div></body>
