--- a/nimi-mute/jan.html
+++ b/nimi-mute/jan.html
@@ -7,7 +7,7 @@
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
     <body><div class="container">
 
-        <h1>jan</h1>
+        <h1>jan</h1><hr>
         <p style="font-size: large; padding: 10px">
         jan li suli.
         <br>jan li ken sona e ijo mute.
