--- a/nimi-mute/len-pi-laso-telo.html
+++ b/nimi-mute/len-pi-laso-telo.html
@@ -7,7 +7,7 @@
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
     <body><div class="container">
 
-        <h1>len pi laso telo</h1>
+        <h1>len pi laso telo</h1><hr>
         <p style="font-size: large; padding: 10px">
         toki a.
         <br>mi lon tomo tawa telo suli tan ni: mi tawa tomo pi jan majuna mi.
@@ -85,7 +85,7 @@
         <br>kon ni li pona mute tawa mi a~
         <br>mi o lukin e kasi mute, e telo sewi mute, e nasin mute...
         <br>o... lape...</p>
-        <hr>
+        <hr style="width: 50%;">
         <p style="font-size: large; padding: 10px">
         wa!
         <br>sewi li kama pimeja suli a...
