--- a/nimi-mute/ona.html
+++ b/nimi-mute/ona.html
@@ -7,7 +7,7 @@
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
     <body><div class="centered-container">
 
-        <h1>ona</h1>
+        <h1>ona</h1><hr>
         <p style="font-size: large; padding: 10px">
         ona li powe.
         <br>mi pali e ona.
