--- a/nimi-mute/suno.html
+++ b/nimi-mute/suno.html
@@ -7,7 +7,7 @@
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
     <body><div class="container">
 
-        <h1>suno</h1>
+        <h1>suno</h1><hr>
         <p style="font-size: large; padding: 10px">
         tenpo mun.
         <br>mi mute li tawa.
