--- a/nimi-mute/tomo-pi-esun-lipu.html
+++ b/nimi-mute/tomo-pi-esun-lipu.html
@@ -7,7 +7,7 @@
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
     <body><div class="container">
 
-        <h1>tomo pi esun lipu</h1>
+        <h1>tomo pi esun lipu</h1><hr>
         <p style="font-size: large; padding: 10px">
         toki a.
         <br>mi lon tomo pi esun lipu.
@@ -70,7 +70,7 @@
         <br>tenpo lili a la telo wawa ale li weka, ona li pona mute a.
         <br>mi kama wawa a!
         <br>mi o kama sona a!</p>
-        <hr>
+        <hr style="width: 50%;">
         <p style="font-size: large; padding: 10px">
         mi pini e kama sona a.
         <br>ken la, tenpo kama la ale li pona a.
