--- a/nimi-mute/sona-pini.html
+++ b/nimi-mute/sona-pini.html
@@ -7,7 +7,7 @@
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
     <body><div class="container">
 
-        <h1>sona pini</h1>
+        <h1>sona pini</h1><hr>
         <p style="font-size: large; padding: 10px">
         tenpo kama la mi sona ala sona e ni?
         <br>lon weka mi?
