--- a/nimi-mute/tomo-ni.html
+++ b/nimi-mute/tomo-ni.html
@@ -5,12 +5,12 @@
         <title>≠</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
-    <body><div class="centered-container">
+    <body><div class="container">
 
         <h1>tomo ni</h1><hr>
         <p style="font-size: large; padding: 10px">
         tomo ni li suli a
-        <br>sinpin ona li laso telo walo
+        <br>sinpin ona li laso teSlo walo
         <br>kule ni li pona mute mute tawa mi
         <br>supa lape li lon
         <br>ona li suli li puwa li pona
