--- a/sitelog.html
+++ b/sitelog.html
@@ -18,6 +18,8 @@
     <body><div class="container">
         <h1>sitelog</h1>
         <hr>
+        <h2>→ 31/8/2022 22:06</h2>
+        <p>Alright, i'm done remaking the site! Not fully, there's still some things i want to do, but it's already better, i think.</p>
         <h2>→ 31/8/2022 20:26</h2>
         <p>It's been a while since i've reinstalled Ubuntu, but i'm back and made another <a href="/mute-ante/nimi-mute/sona-pini">little poem</a>! Also i feel like changing the layout again...</p>
         <h2>→ 18/8/2022 06:29</h2>
