--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <div class="this-container">
         <h1>cvni81 / mute ante</h1>
         <p>seize the day · pt-br, en, tok · <18yo, they/them</p>
-        <a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a> · 
-        <a href="mailto:cvni1981@gmail.com">email</a> · 
-        <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify">spotify</a> · 
-        <a href="https://bandcamp.com/cvni1981" class="bandcamp">bandcamp (fan)</a> · 
-        <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube">youtube</a><br>
-        <p style="margin-bottom: 8px;">Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself. Also, this site is under some reconstruction!</p></div>
+        <a href="http://discordapp.com/users/691348576093077535" class="discord" style="font-size:larger">discord</a> · 
+        <a href="mailto:cvni1981@gmail.com" style="font-size:larger">email</a> · 
+        <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify" style="font-size:larger">spotify</a> · 
+        <a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger">bandcamp (fan)</a> · 
+        <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube" style="font-size:larger">youtube</a><br>
+        <p style="margin-bottom: 8px;">Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself.</p></div>
     <div class="this-container" style="font-size:larger">
             <a href="/mute-ante/interests">interests</a> things i'm interested in<br>
             <a href="/mute-ante/musicians">musicians</a> good music people<br>
