--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
             bottom: 50%;
             transform: translate(-50%, 50%);}
         .sidebox{
+            height: fit-content;
             margin: 10px auto;
             padding: 20px;
             border: solid #F0F0F0 2px;
@@ -24,7 +25,7 @@
     </style>
     </head>
 
-    <body><div class="grid-container">
+    <body><div class="centered-grid-container">
         <div class="sidebox">did it work?</div>
         <div class="container">
         <h1>stuff I find interesting</h1>
