--- a/test.html
+++ b/test.html
@@ -9,7 +9,16 @@
     </head>
 
     <body><div class="centered-grid-container">
-        <div class="sidebox">did it work?</div>
+        <div class="sidebox">
+            <a href="/mute-ante">home</a><ul>
+            <li><a href="interests.html">interests</a></li>
+            <li><a href="musicians.html">musicians</a></li>
+            <li><a href="websites.html">websites</a></li>
+            <li><a href="blender.html">blender</a></li>
+            <li><a href="nimi-mute.html">nimi mute</a></li>
+            <li><a href="difference.html">difference</a></li>
+            <li><a href="sitelog.html">sitelog</a></li></ul>
+        </div>
         <div class="container">
         <h1>stuff I find interesting</h1>
         <hr>
@@ -21,5 +30,4 @@
             <li><b>Travelling</b>: seeing new places and people is great, as well as being relaxing and serving as inspiration for things.<br></li>
             <li><b>Other things</b>: listening to music, taking photos, chatting, making dumb music in Beepbox, flags, typography and design.<br></li>
             </ul>
-        <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div></div></body>
