--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 
     <body><div class="centered-grid-container">
         <div class="sidebox">
-            <a href="/mute-ante">home</a><ul>
+            <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
             <li><a href="interests.html">interests</a></li>
             <li><a href="musicians.html">musicians</a></li>
             <li><a href="websites.html">websites</a></li>
