added sidebox to blender

--- a/blender.html
+++ b/blender.html
@@ -18,7 +18,18 @@
 
     </style></head>
 
-    <body><div class="container">
+    <body><div class="centered-grid-container">
+        <div class="sidebox">
+            <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
+            <li><a href="interests.html">interests</a></li>
+            <li><a href="musicians.html">musicians</a></li>
+            <li><a href="websites.html">websites</a></li>
+            <li><a href="blender.html">blender</a></li>
+            <li><a href="nimi-mute.html">nimi mute</a></li>
+            <li><a href="difference.html">difference</a></li>
+            <li><a href="sitelog.html">sitelog</a></li></ul>
+        </div>
+        <div class="container">
         <h1>some things made in blender</h1>
         <hr>
         <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color. (i should make colorful things more often...) These are a bunch of them.
@@ -35,6 +46,4 @@
         <img src="/mute-ante/blenders/idk2.png" alt="idk2" width="100%">
         <img src="/mute-ante/blenders/lines.png" alt="lines" width="100%">
         <img src="/mute-ante/blenders/square.png" alt="square" width="100%">
-
-        <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div></body>
