added (non-centered) grid-container

--- a/blender.html
+++ b/blender.html
@@ -18,7 +18,7 @@
 
     </style></head>
 
-    <body><div class="centered-grid-container">
+    <body><div class="grid-container">
         <div class="sidebox">
             <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
             <li><a href="interests.html">interests</a></li>
