--- a/websites.html
+++ b/websites.html
@@ -7,7 +7,17 @@
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-    <body><div class="centered-container">
+    <body><div class="centered-grid-container">
+        <div class="sidebox">
+            <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
+            <li><a href="interests.html">interests</a></li>
+            <li><a href="websites.html">websites</a></li>
+            <li><a href="blender.html">blender</a></li>
+            <li><a href="nimi-mute.html">nimi mute</a></li>
+            <li><a href="difference.html">difference</a></li>
+            <li><a href="sitelog.html">sitelog</a></li></ul>
+        </div>
+        <div class="container">
         <h1>cool websites</h1>
         <hr>
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
