added sidebox t difference

--- a/difference.html
+++ b/difference.html
@@ -7,23 +7,20 @@
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-    <style>
-        .this-container{
-            background-color: #080808;
-            width: 700px;
-            margin: 10px auto;
-            padding: 20px;
-            border: solid #F0F0F0 2px;
-            border-radius: 30px;
-            line-height: 1.5;
-        }
-    </style>
-
-    <body><div class="this-container">
+    <body><div class="centered-grid-container">
+        <div class="sidebox">
+            <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
+            <li><a href="interests.html">interests</a></li>
+            <li><a href="musicians.html">musicians</a></li>
+            <li><a href="websites.html">websites</a></li>
+            <li><a href="blender.html">blender</a></li>
+            <li><a href="nimi-mute.html">nimi mute</a></li>
+            <li><a href="sitelog.html">sitelog</a></li></ul>
+        </div>
+        <div class="container">
 
         <h1>about difference in general</h1>
         <hr>
-        <figure><blockquote>
             Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
             <br>It'd be boring if everyone'd be the same, if nothing new happened each day, wouldn't it?
             <br>Why question and shun and fight differences instead of embracing and accepting them?
@@ -36,7 +33,5 @@
             <br><b><i>→ Everyone is equal and different, but not more or less than anyone else.</i></b>
             <br>
             <br>A bit confusing, but i hope you get it.
-            </blockquote></figure>
-        <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div>
     </body>
