--- a/websites.html
+++ b/websites.html
@@ -11,7 +11,7 @@
         <div class="sidebox">
             <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
             <li><a href="interests.html">interests</a></li>
-            <li><a href="websites.html">websites</a></li>
+            <li><a href="musicians.html">musicians</a></li>
             <li><a href="blender.html">blender</a></li>
             <li><a href="nimi-mute.html">nimi mute</a></li>
             <li><a href="difference.html">difference</a></li>
