--- a/difference.html
+++ b/difference.html
@@ -7,7 +7,7 @@
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-    <body><div class="grid-container">
+    <body><div class="centered-grid-container">
         <div class="sidebox">
             <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
             <li><a href="interests.html">interests</a></li>
