added sidebox to sitelog

--- a/sitelog.html
+++ b/sitelog.html
@@ -15,7 +15,17 @@
                 text-decoration-color: #ddba39}
         </style></head>
 
-    <body><div class="container">
+    <body><div class="grid-container">
+        <div class="sidebox">
+            <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
+            <li><a href="interests.html">interests</a></li>
+            <li><a href="musicians.html">musicians</a></li>
+            <li><a href="websites.html">websites</a></li>
+            <li><a href="blender.html">blender</a></li>
+            <li><a href="nimi-mute.html">nimi mute</a></li>
+            <li><a href="difference.html">difference</a></li>
+        </div>
+        <div class="container">
         <h1>sitelog</h1>
         <hr>
         <h2>→ 31/8/2022 22:06</h2>
@@ -32,5 +42,4 @@
         <p>Changed the index layout some. I think it's better.</p>
         <h2>→ 12/8/2022 17:42</h2>
         <p>I just added the <a href="/mute-ante/blender">blender images</a> and now <a href="/mute-ante/sitelog">this log</a> so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
-        <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div></body>
