added sidebox to nimi mute

--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -7,7 +7,17 @@
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
     </head>
 
-    <body><div class="centered-container">
+    <body><div class="centered-grid-container">
+        <div class="sidebox">
+            <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
+            <li><a href="interests.html">interests</a></li>
+            <li><a href="musicians.html">musicians</a></li>
+            <li><a href="websites.html">websites</a></li>
+            <li><a href="blender.html">blender</a></li>
+            <li><a href="difference.html">difference</a></li>
+            <li><a href="sitelog.html">sitelog</a></li></ul>
+        </div>
+        <div class="container">
         <h1>nimi mute</h1>
         <hr>
         <p>mi pali e nimi mute ni lon tenpo pini. taso mi pana ala e ona tawa jan. pali nimi li pona e mi a. mi wile e ni: lipu ni li pona tawa sina.
@@ -22,5 +32,4 @@
             <li><a href="/mute-ante/nimi-mute/jan">jan (nimi 332)</a></li>
             <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu">tomo pi esun lipu (nimi 860)</a></li>
             </ul>
-        <p> ⇤ <a href="/mute-ante">lipu pini</a></p>
     </div></body>
