--- a/blender.html
+++ b/blender.html
@@ -21,12 +21,12 @@
     <body><div class="grid-container">
         <div class="sidebox">
             <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
-            <li><a href="interests.html">interests</a></li>
-            <li><a href="musicians.html">musicians</a></li>
-            <li><a href="websites.html">websites</a></li>
-            <li><a href="nimi-mute.html">nimi mute</a></li>
-            <li><a href="difference.html">difference</a></li>
-            <li><a href="sitelog.html">sitelog</a></li></ul>
+            <li><a href="/mute-ante/interests">interests</a></li>
+            <li><a href="/mute-ante/musicians">musicians</a></li>
+            <li><a href="/mute-ante/websites">websites</a></li>
+            <li><a href="/mute-ante/nimi-mute">nimi mute</a></li>
+            <li><a href="/mute-ante/difference">difference</a></li>
+            <li><a href="/mute-ante/sitelog">sitelog</a></li></ul>
         </div>
         <div class="container">
         <h1>some things made in blender</h1>
