--- a/nimi-mute/sona-pini.html
+++ b/nimi-mute/sona-pini.html
@@ -5,7 +5,7 @@
         <title>≠</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
-    <body><div class="centered-grid-container">
+    <body><div class="grid-container">
         <div class="sidebox">
             <a href="/mute-ante/nimi-mute">⇤ nimi mute</a><ul style="margin-top: 0px;margin-bottom: 0px;">
         </div>
