--- a/sitelog.html
+++ b/sitelog.html
@@ -28,6 +28,8 @@
         <div class="container">
         <h1>sitelog</h1>
         <hr>
+        <h2>→ 1/9/2022 15:48</h2>
+        <p>I just added a little box to help navigating through the site easier. Just a couple more things and i'll be done...</p>
         <h2>→ 31/8/2022 22:06</h2>
         <p>Alright, i'm done remaking the site! Not fully, there's still some things i want to do, but it's already better, i think.</p>
         <h2>→ 31/8/2022 20:26</h2>
