--- a/nimi-mute/jan.html
+++ b/nimi-mute/jan.html
@@ -5,11 +5,7 @@
         <title>≠</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
-    <body><div class="grid-container">
-        <div class="sidebox">
-            <a href="/mute-ante/nimi-mute">⇤ nimi mute</a><ul style="margin-top: 0px;margin-bottom: 0px;">
-        </div>
-        <div class="container">
+    <body><div class="container">
 
         <h1>jan</h1><hr>
         <p style="font-size: large; padding: 10px">
@@ -72,5 +68,6 @@
         <br>toki la o pona.
         <br>o jan pona.
         </p>
+    <a></a>
     </div>
     </body>
