--- a/nimi-mute/len-pi-laso-telo.html
+++ b/nimi-mute/len-pi-laso-telo.html
@@ -5,10 +5,7 @@
         <title>≠</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
-    <body><div class="grid-container">
-        <div class="sidebox">
-            <a href="/mute-ante/nimi-mute">⇤ nimi mute</a><ul style="margin-top: 0px;margin-bottom: 0px;">
-        </div>
+    <body>
         <div class="container">
 
         <h1>len pi laso telo</h1><hr>
@@ -101,5 +98,6 @@
         <br>ni la toki mi li pini.
         <br>ken la, mi toki lon suno kama.
         <br>mi tawa a...</p>
+         ⇤ <a href="/mute-ante/nimi-mute">nimi mute</a>
     </div>
     </body>
