--- a/nimi-mute/len-pi-laso-telo.html
+++ b/nimi-mute/len-pi-laso-telo.html
@@ -98,6 +98,6 @@
         <br>ni la toki mi li pini.
         <br>ken la, mi toki lon suno kama.
         <br>mi tawa a...</p>
-         ⇤ <a href="/mute-ante/nimi-mute">nimi mute</a>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">nimi mute</a></p>
     </div>
     </body>
