--- a/nimi-mute/jan.html
+++ b/nimi-mute/jan.html
@@ -69,5 +69,6 @@
         <br>o jan pona.
         </p>
     <a></a>
+    <p> ⇤ <a href="/mute-ante/nimi-mute">nimi mute</a></p>
     </div>
     </body>
