--- a/nimi-mute/suno.html
+++ b/nimi-mute/suno.html
@@ -5,10 +5,7 @@
         <title>≠</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
-    <body><div class="grid-container">
-        <div class="sidebox">
-            <a href="/mute-ante/nimi-mute">⇤ nimi mute</a><ul style="margin-top: 0px;margin-bottom: 0px;">
-        </div>
+    <body>
         <div class="container">
 
         <h1>suno</h1><hr>
@@ -78,5 +75,6 @@
         <br>kalama musi pi weka sona.
         <br>tawa ni: tawa pona.
         </p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">nimi mute</a></p>
     </div>
     </body>
