--- a/nimi-mute/tomo-pi-esun-lipu.html
+++ b/nimi-mute/tomo-pi-esun-lipu.html
@@ -5,10 +5,7 @@
         <title>≠</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
-    <body><div class="grid-container">
-        <div class="sidebox">
-            <a href="/mute-ante/nimi-mute">⇤ nimi mute</a><ul style="margin-top: 0px;margin-bottom: 0px;">
-        </div>
+    <body>
         <div class="container">
 
         <h1>tomo pi esun lipu</h1><hr>
@@ -92,5 +89,6 @@
         <br>tenpo ni la mi lon tomo mi la, toki mi li pini.
         <br>mi wile e ni: lipu ni li pona tawa sina li musi tawa sina.
         <br>mi tawa a!</p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">nimi mute</a></p>
     </div>
     </body>
