--- a/nimi-mute/ona.html
+++ b/nimi-mute/ona.html
@@ -5,11 +5,8 @@
         <title>≠</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
-    <body><div class="centered-grid-container">
-        <div class="sidebox">
-            <a href="/mute-ante/nimi-mute">⇤ nimi mute</a><ul style="margin-top: 0px;margin-bottom: 0px;">
-        </div>
-        <div class="container">
+    <body>
+        <div class="centered-container">
 
         <h1>ona</h1><hr>
         <p style="font-size: large; padding: 10px">
@@ -26,5 +23,6 @@
         <br>pilin la mi majuna.
         <br>mi pakala.
         </p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">nimi mute</a></p>
     </div>
     </body>
