--- a/sitelog.html
+++ b/sitelog.html
@@ -28,6 +28,8 @@
         <div class="container">
         <h1>sitelog</h1>
         <hr>
+        <h2>→ 1/9/2022 19:45</h2>
+        <p>I might have added a bit too much but it's done now!</p>
         <h2>→ 1/9/2022 15:48</h2>
         <p>I just added a little box to help navigating through the site easier. Just a couple more things and i'll be done...</p>
         <h2>→ 31/8/2022 22:06</h2>
