--- a/test-index.html
+++ b/test-index.html
@@ -8,9 +8,11 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
         #statuscafe {
-            padding: .5em;
-            background-color: azure;
-            border: 1px solid midnightblue;}
+            padding: 20px;
+            margin: 20px;
+            border: solid #F0F0F0 2px;
+            border-radius: 30px;
+            line-height: 1.5;}
         #statuscafe-username {margin-bottom: .5em;}
         #statuscafe-content {margin: 0 1em 0.5em 1em;}
         .this-container{
