--- a/test-index.html
+++ b/test-index.html
@@ -46,4 +46,4 @@
             <a href="/mute-ante/difference">difference</a> why it matters<br>
             <a href="/mute-ante/sitelog">sitelog</a></ul></div></div>
     </div>
-    <div id="statuscafe"><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></body>
+    <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></body>
