--- a/test-index.html
+++ b/test-index.html
@@ -23,6 +23,10 @@
             border-radius: 30px;
             line-height: 1.5;
             text-align: center;}
+        .grid{
+            display: grid;
+            grid-template-columns: auto auto;
+        }
 
     </style></head>
 
@@ -37,7 +41,7 @@
         <a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger">bandcamp (fan)</a> · 
         <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube" style="font-size:larger">youtube</a><br>
         <p style="margin-bottom: 8px;">Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself.</p></div>
-        <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
+        <div class="grid"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
         <div class="this-container" style="font-size:larger">
             <a href="/mute-ante/interests">interests</a> things i'm interested in<br>
             <a href="/mute-ante/musicians">musicians</a> good music people<br>
@@ -45,5 +49,5 @@
             <a href="/mute-ante/blender">blender</a> things i've made in blender<br>
             <a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br>
             <a href="/mute-ante/difference">difference</a> why it matters<br>
-            <a href="/mute-ante/sitelog">sitelog</a></ul></div></div>
+            <a href="/mute-ante/sitelog">sitelog</a></ul></div></div></div>
     </div></body>
