--- a/sitelog-test.html
+++ b/sitelog-test.html
@@ -13,6 +13,7 @@
                 background-color: #ddba39; 
                 color:#000429;
                 text-decoration-color: #ddba39}
+            #statuscafe{margin-top: 20px; margin-bottom: 20px}
         </style></head>
 
     <body><div class="grid-container">
