--- a/sitelog.html
+++ b/sitelog.html
@@ -13,6 +13,7 @@
                 background-color: #ddba39; 
                 color:#000429;
                 text-decoration-color: #ddba39}
+            #statuscafe{margin-top: 20px; margin-bottom: 20px}
         </style></head>
 
     <body><div class="grid-container">
@@ -28,6 +29,10 @@
         <div class="container">
         <h1>sitelog</h1>
         <hr>
+        <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
+        <hr>
+        <h2>→ 3/9/2022 17:13</h2>
+        <p>I now have a status.cafe thing after it decided not to give me the confirmation email darnit. I tried to put it at the start but it didn't seem to work and here seemed more appropriate.</p>
         <h2>→ 1/9/2022 19:45</h2>
         <p>I might have added a bit too much but it's done now!</p>
         <h2>→ 1/9/2022 15:48</h2>
