--- a/nimi-mute/sona-pini.html
+++ b/nimi-mute/sona-pini.html
@@ -23,7 +23,7 @@
         <br>e pali mi anu seme?
         <br>mi sona pona e ni anu seme?
         <br>pilin mi la ala.<br>
-        <br>taso, mi sona e ijo lon tenpo ale.
+        <br>taso, lili la,  mi sona e ijo lon tenpo ale.
         <br>tan li pona, li ike.
         <br>taso ale li suli.
         <br>lon jan li sona pini.
