--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="mailto:cvni1981@gmail.com" style="font-size:larger">email</a> · 
         <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify" style="font-size:larger">spotify</a> · 
         <a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger">bandcamp (fan)</a> · 
-        <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube" style="font-size:larger">youtube</a><br>
+        <a href="https://status.cafe/users/cvni81" class="cafe" style="font-size:larger">status.cafe</a><br>
         <p style="margin-bottom: 8px;">Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself. <span style="color:#05a1fc">●</span><span style="color:#fc074c">●</span><span style="color:#ffb400">●</span></p></div>
     <div class="this-container" style="font-size:larger">
             <a href="/mute-ante/interests">interests</a> things i'm interested in<br>
