--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <div class="this-container">
         <h1>cvni81 / mute ante</h1>
         <p>seize the day · pt-br, en, tok · <18yo, they/them</p>
-        <a href="http://discordapp.com/users/691348576093077535" class="discord" style="font-size:larger">discord</a> · 
-        <a href="mailto:cvni1981@gmail.com" style="font-size:larger">email</a> · 
-        <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify" style="font-size:larger">spotify</a> · 
-        <a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger">bandcamp (fan)</a> · 
-        <a href="https://status.cafe/users/cvni81" class="cafe" style="font-size:larger">status.cafe</a><br>
+        <a href="http://discordapp.com/users/691348576093077535" class="discord" style="font-size:larger" title="talk to me">discord</a> · 
+        <a href="mailto:cvni1981@gmail.com" style="font-size:larger" title="talk to me but slower">email</a> · 
+        <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify" style="font-size:larger" title="music i like">spotify</a> · 
+        <a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger" title="music i like enough to purchase">bandcamp (fan)</a> · 
+        <a href="https://status.cafe/users/cvni81" class="cafe" style="font-size:larger" title="things i feel like telling people">status.cafe</a><br>
         <p style="margin-bottom: 8px;">Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself. <span style="color:#05a1fc">●</span><span style="color:#fc074c">●</span><span style="color:#ffb400">●</span></p></div>
     <div class="this-container" style="font-size:larger">
             <a href="/mute-ante/interests">interests</a> things i'm interested in<br>
