--- a/interests.html
+++ b/interests.html
@@ -27,6 +27,6 @@
             <li><b>Biology</b>: while my favorite bit of biology is <a href="https://en.wikipedia.org/wiki/Botany">botany</a>, every bit of life on Earth is awesome and i wanna know more about them! 'cause it's fun!<br></li>
             <li><b>Drawing things</b>: i mostly make geometric things with <a href="https://en.wikipedia.org/wiki/Straightedge_and_compass_construction">ruler and compass</a>, which is fun to work with given its limitations; though i also draw non-geometric things every now and again. I also like to use <a href="/mute-ante/blender.html">Blender</a> for 3d things.<br></li>
             <li><b>Travelling</b>: seeing new places and people is great, as well as being relaxing and serving as inspiration for things.<br></li>
-            <li><b>Other things</b>: listening to music, taking photos, chatting, making dumb music in Beepbox, flags, typography and design.<br></li>
+            <li><b>Other things</b>: listening to music, taking photos, chatting, making dingus music in Beepbox, flags, history, typography and design.<br></li>
             </ul>
     </div></div></body>
