--- a/sitelog.html
+++ b/sitelog.html
@@ -31,6 +31,7 @@
         <hr>
         <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
         <hr>
+        <script language="JavaScript">document.writeIn ("last update: "+document.lastModified);</script>
         <h2>→ 3/9/2022 17:13</h2>
         <p>I now have a status.cafe thing after it decided not to give me the confirmation email darnit. I tried to put it at the start but it didn't seem to work and here seemed more appropriate.</p>
         <h2>→ 1/9/2022 19:45</h2>
