--- a/sitelog.html
+++ b/sitelog.html
@@ -24,14 +24,13 @@
             <li><a href="/mute-ante/websites">websites</a></li>
             <li><a href="/mute-ante/blender">blender</a></li>
             <li><a href="/mute-ante/nimi-mute">nimi mute</a></li>
-            <li><a href="/mute-ante/difference">difference</a></li>
+            <li><a href="/mute-ante/difference">difference</a></li></ul>
         </div>
         <div class="container">
         <h1>sitelog</h1>
         <hr>
         <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
         <hr>
-        <script language="JavaScript">document.writeIn ("last update: "+document.lastModified);</script>
         <h2>→ 3/9/2022 17:13</h2>
         <p>I now have a status.cafe thing after it decided not to give me the confirmation email darnit. I tried to put it at the start but it didn't seem to work and here seemed more appropriate.</p>
         <h2>→ 1/9/2022 19:45</h2>
