--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div style="position: absolute; left: 50%; bottom: 50%; transform: translate(-50%, 50%);">
     <div class="this-container">
         <h1>cvni81 / mute ante</h1>
-        <p>seize the day · pt-br, en, tok · <18yo, they/them</p>
+        <p>seize the day · pt-br, en-4, tok-3 · <18yo, they/them</p>
         <a href="http://discordapp.com/users/691348576093077535" class="discord" style="font-size:larger" title="talk to me">discord</a> · 
         <a href="mailto:cvni1981@gmail.com" style="font-size:larger" title="talk to me but slower">email</a> · 
         <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify" style="font-size:larger" title="music i like">spotify</a> · 
