--- a/nimi-mute/ona.html
+++ b/nimi-mute/ona.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>≠</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300;800&display=swap');</style> 
+        <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
     <body>
         <div class="centered-container">
 
